🐞 Fixed a bug on iOS where buttons wouldn’t use correct font-family

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -79,6 +79,7 @@
 }
 
 .filter {
+  font: inherit;
   font-size: 1.7rem;
   line-height: 2.2rem;
   letter-spacing: -0.023rem;
